force-app/main/default/objects/Payment_Plan_Info__mdt/Payment_Plan_Info__mdt.object-meta.xml
<CustomObject>
    <description>Stored information regarding Number of Payments, Number of Fees and, for Hybrid, % of First Payment.</description>
    <label>Payment Plan Info</label>
    <pluralLabel>Payment Plan Info</pluralLabel>
</CustomObject>