force-app/main/default/objects/Payment_Plan_Info__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates this is a currently available Payment Plan</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>