force-app/main/default/objects/Payment_Plan_Info__mdt/fields/Number_of_Fees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Fees__c</fullName>
    <label>Number of Fees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>