force-app/main/default/objects/Payment_Plan_Info__mdt/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <inlineHelpText>Enter 1 for One-Time Payment.  Annual Plan MUST leave this field blank.  For all other plan, enter expected number of installments</inlineHelpText>
    <label>Number of Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>