force-app/main/default/objects/Payment_Plan_Info__mdt/fields/Percent_of_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_First_Payment__c</fullName>
    <label>Percent of First Payment</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>