force-app/main/default/objects/Payment_Plan_Info__mdt/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>The annual interest rate to apply to financed purchases with this payment plan.</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>