force-app/main/default/objects/Payment_Plan_Info__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Onetime</fullName>
                <label>One-time</label>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
                <isActive>false</isActive>
                <label>Hybrid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>