force-app/main/default/objects/Payment_Plan_Info__mdt/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>DeveloperName</columns>
    <columns>Rate__c</columns>
    <columns>Type__c</columns>
    <columns>Percent_of_First_Payment__c</columns>
    <columns>Number_of_Payments__c</columns>
    <columns>Number_of_Fees__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
</ListView>